## ---------------------------------------------------------
##  G4_QPIX | cfg/CMakeLists.txt
##
##  CMake build script.
##   * Author: Justo Martin-Albo
##   * Creation date: 15 Aug 2019
## ---------------------------------------------------------

install(FILES init_vis.mac vis.mac DESTINATION bin)
